feat: Release v0.10.0 with introducing Arrow Flight feature
For more details, further reading CHANGELOG.md
